--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 <body>
   <div class="wrapper">
     <!-- HEADER -->
+    <h1>Welconme to Riyadh</h1>
+
+    <h3>Where A Traditional Past Meets A Moderm Future</h3>
     <!-- SUB HEAD -->
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+      <img src="../images/trasportation/transit.jpg" alt="transit image">
+
     </div>
   </div>
 </body>
