Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="../images/trasportation/transit.jpg" alt="transit image">
+      <img src="images\transportation\transit.jpg" alt="transit image">
 
     </div>
   </div>
