--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="wrapper">
     <!-- HEADER -->
-    <h1>Welconme to Riyadh</h1>
+    <h1>Welcome to Riyadh</h1>
 
     <h2>Where A Traditional Past Meets A Moderm Future</h2>
     <!-- SUB HEAD -->
